# cunnx

./: Balance.lua  BlockMixture.lua  BlockSparse.cu  BlockSparse.lua  CMakeLists.txt  ElementTable.lua  LazyKBest.cu  LazyKBest.lua  LinearNoBias.lua  MultinomialStatistics.lua  NoisyReLU.cu  NoisyReLU.lua  README.md  SoftMaxTree.cu  Sort.lua  TypeDecorator.lua  WindowGate.cu  WindowGate.lua  WindowGate2.cu  WindowGate2.lua  WindowMixture.lua  WindowSparse.cu  WindowSparse.lua  init.cu  init.lua  utils.c  utils.h
rocks/: cunnx-scm-1.rockspec
test/: dataset-mnist.lua  test.lua  test_noisyRelu.lua
